objects/Case.object
<CustomObject>
    <fields>
        <fullName>Address_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Book</label>
        <referenceTo>Address_Book__c</referenceTo>
        <relationshipLabel>INTERPOL Inquiries</relationshipLabel>
        <relationshipName>INTERPOL_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aliases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aliases</label>
        <referenceTo>Alias__c</referenceTo>
        <relationshipLabel>Related Aliases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Resolve_Comments__c</fullName>
        <label>Auto Resolve Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Resolve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Resolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bcc__c</fullName>
        <label>Bcc</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Businesses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Businesses</label>
        <referenceTo>Businesses__c</referenceTo>
        <relationshipLabel>Related Businesses</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Control_Nr__c</fullName>
        <label>Control_Nr</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DOBs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOBs</label>
        <referenceTo>DOB__c</referenceTo>
        <relationshipLabel>Related DOBs</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deduplication_Details__c</fullName>
        <description>This field is used for MuleSoft deduplication to inform IOCC dispatch that multiple cases were found during ingestion but MuleSoft couldn&apos;t determine an exact match so IOCC dispatch will have to triage the inquiry to determine next steps. This field is customer facing and needs to be seen by all users. This field needs to be added to the new Inquiry LWC.</description>
        <label>Deduplication Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTITY_ID__c</fullName>
        <label>ENTITY_ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FileNumber__c</fullName>
        <label>FileNumber</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>INTERPOL_Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INTERPOL Case</label>
        <referenceTo>ComplaintCase</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Modified_On__c</fullName>
        <label>Modified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Offenses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offenses</label>
        <referenceTo>Offence__c</referenceTo>
        <relationshipLabel>Related Offenses</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Division__c</fullName>
        <label>Owning Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Properties__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Properties</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Related Properties</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QueueID__c</fullName>
        <label>QueueID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Received_On__c</fullName>
        <label>Received On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Id__c</fullName>
        <label>Status Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_Of_Notification__c</fullName>
        <label>Type Of Notification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>High_Priority_Inquiries_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>High Priority Inquiries</label>
        <queue>High_Priority_Inquiries</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IOCC_Dispatch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>IOCC-Dispatch</label>
        <queue>IOCC_Dispatch</queue>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Division_Inquires</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Received_On__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Importance__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Sender__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>INTERPOL_Cases__c</columns>
        <columns>Modified_On__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Owning_Division__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Division Open Inquires</label>
    </listViews>
    <listViews>
        <fullName>Translation_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Translation</label>
        <queue>Translation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>